--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -54,6 +54,7 @@ Other Changes:
 - ImDrawList: Fixed minor bug introduced in 1.75 where AddCircle() with 12 segments would generate
   an extra vertex. (This bug was mistakenly marked as fixed in earlier 1.77 release). [@ShironekoBen]
 - Backends: OpenGL3: Added support for glad2 loader. (#3330) [@moritz-h]
+- Misc: Fixed SetKeyboardFocusHere() focusing wrong widget when target widget disappears. (#432) [@rokups]
 
 
 -----------------------------------------------------------------------
