Docking: Fixed a memory leak when window is docked again after undocking through SetWindowDock().

--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -135,6 +135,7 @@ Docking+Viewports Branch:
 
 - Docking, Nav: Fixed using gamepad/keyboard navigation not being able enter menu layer when
   it only contained the standard Collapse/Close buttons and no actual menu. (#5463, #4792)
+- Docking: Fixed a memory leak when window is docked again after undocking through SetWindowDock(). [@rokups]
 - Backends: GLFW: Fixed leftover static variable preventing from changing or
   reinitializing backend while application is running. (#4616, #5434) [@rtoumazet]
 
