--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -68,6 +68,8 @@ Other Changes:
 - Backends: Metal: Use __bridge for ARC based systems. (#5403) [@stack]
 - Backends: Metal: Add dispatch synchronization. (#5447) [@luigifcruz]
 - Backends: OSX: Fixes to support full app creation in C++. (#5403) [@stack]
+- Windows: Fix only part of window titlebar starting drag operations when non-default font
+  size is set before Begin(). [@rokups] (#5529)
 
 
 -----------------------------------------------------------------------
