Menus: Fix sub-menu inhibition stopping working in some cases.
Fixes the case where following menu hover sequence results in incorrect RestoreNavWindow (previously SourceWindow) pointing to opened sub-menu:
1. Hover "Menu -> Options" - Open ##Menu_02 window
2. Hover "Menu -> Colors"  - SourceWindow incorrectly points to ##Menu_02 window

--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -79,6 +79,7 @@ Other Changes:
 - Window: Fixed a potential crash when appending to a child window. (#5515, #3496, #4797) [@rokups]
 - IO: Added ImGuiKey_MouseXXX aliases for mouse buttons/wheel so all operations done on ImGuiKey
   can apply to mouse data as well. (#4921)
+- Menus: Fixed sub-menu inadvertently closing in some cases when mouse is moving towards that sub-menu. [@rokups]
 - Nav: Fixed moving/resizing window with gamepad or keyboard when running at very high framerate.
 - Nav: Pressing Space/GamepadFaceDown on a repeating button uses the same repeating rate as a mouse hold.
 - Platform IME: [Windows] Removed call to ImmAssociateContextEx() leading to freeze on some setups.
