--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -155,6 +155,8 @@ Docking+Viewports Branch:
 - Docking: Fixed regression introduced in v1.87 when docked window content not rendered
   while switching between with CTRL+Tab. [@rokups]
 - Docking: Fixed amending into an existing tab bar from rendering invisible items. (#5515)
+- Docking: Fixed visual discrepancy when interaction with some parts of dock node would
+  visually unfocus current focused window. (#3820) [@rokups]
 - Docking+Viewports: Fixed undocking window node causing parent viewports to become unresponsive
   in certain situation (e.g. hidden tab bar). (#5503) [@rokups]
 - Backends: GLFW: Fixed leftover static variable preventing from changing or
