--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -80,6 +80,12 @@ Other Changes:
 - IO: Added ImGuiKey_MouseXXX aliases for mouse buttons/wheel so all operations done on ImGuiKey
   can apply to mouse data as well. (#4921)
 - Menus: Fixed sub-menu inadvertently closing in some cases when mouse is moving towards that sub-menu. [@rokups]
+- Menus: Improve sub-menu opening inhibition to:
+  - Allow mouse cursor to move to opposite side a little
+  - Allow other sub-menu to open when mouse stops moving
+  - Prevent closing of sub-menus when mouse cursor is transitioning between viewport windows (only useful
+    for docking branch).
+  (#5614) [@rokups]
 - Nav: Fixed moving/resizing window with gamepad or keyboard when running at very high framerate.
 - Nav: Pressing Space/GamepadFaceDown on a repeating button uses the same repeating rate as a mouse hold.
 - Platform IME: [Windows] Removed call to ImmAssociateContextEx() leading to freeze on some setups.
